# convex-dart

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pubspec.yaml
.github/workflows/: dart.yml
convex_dart/: CHANGELOG.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
convex_dart/cargokit/build_tool/lib/src/: android_environment.dart  artifacts_provider.dart  build_gradle.dart
convex_dart/lib/: convex_dart.dart
convex_dart/lib/src/: bytes.dart  convex_dart_for_generated_code.dart  encode.dart  internal_convex_client.dart  literal.dart  opperations.dart  optional.dart  schema.dart  task_queue.dart
convex_dart/lib/src/rust/: dart.dart  dart.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  value.dart  value.freezed.dart
convex_dart/lib/src/rust/value/json/: bytes.dart  (+2 more)
convex_dart/rust/: Cargo.toml  README.md
convex_dart/rust/src/: frb_generated.rs  lib.rs
convex_dart/rust/src/base_client/: mod.rs  query_result.rs  request_manager.rs
convex_dart/rust/src/client/: mod.rs  worker.rs
convex_dart/rust/src/dart/: mod.rs
convex_dart/rust_/: Cargo.toml  README.md
convex_dart/rust_/src/: lib.rs
convex_dart_cli/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
convex_dart_cli/lib/src/: task_queue.dart  types.dart  types.mapper.dart
example/: .gitignore  cargokit_options.yaml  hi.json  package-lock.json  pubspec.yaml  readme.md
example/convex/: generic_functions.ts  http.ts  primitive_returns.ts  tasks.ts
example/convex/_generated/: api.d.ts
example/integration_test/: auth_test.dart  http_test.dart  primitive_test.dart  serialization_test.dart  tasks_crud_test.dart  test_all.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/src/convex/: client.dart  literals.dart  schema.dart
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: primitive_test.dart  serialization_test.dart  tasks_crud_test.dart
example/utils/: generate_tests.dart
src/base_client/: mod.rs
(+633 files in other folders)
