[package]
name = "convex_dart"
version = "0.2.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
android_logger = { version = "0.14.1" }
log = { version = "0.4.21" }
convex = { version = "0.10.1", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.61" }
tokio-stream = { features = ["io-util", "sync"], version = "0.1" }
once_cell = { version = "1.19.0" }
futures = { version = "0.3" }
parking_lot = { version = "0.12.3" }
async-once-cell = { version = "0.5.3" }
serde_json = { version = "1.0.120" }
# Causes more issues with cargokit
# rustls = { version = "0.23", features = ["aws-lc-rs"] }
# aws-lc-rs = { version = "1.14", features = ["bindgen"] }
ordered-float = "5.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
maplit = { version = "1" }
